Implemented player differentiating shaders, and replaced melee and parry indicative FX items with actual objects for testing

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -5,6 +5,7 @@
 @../data/config/Partition.ini@
 @../data/config/Pilot.ini@
 @../data/config/Projectile.ini@
+@../data/config/Shader.ini@
 @../data/config/Ship.ini@
 @../data/config/UI.ini@
 
