--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -97,7 +97,8 @@ Pivot             = center
 [O-Pilot1P1@O-Pilot1]
 Body                 = B-Pilot1P1
 Position             = @O-PilotP1
-ChildList            = O-Ship1P1 # O-HeadsUpText
+ShaderList           = SH-OutlineP1
+ChildList            = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Parry
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -124,7 +125,8 @@ CheckMask         = pilotP2
 Body                 = B-Pilot1P2
 Position             = @O-PilotP2
 Flip                 = @O-PilotP2
-ChildList            = O-Ship1P2 # O-HeadsUpText
+ShaderList           = SH-OutlineP2
+ChildList            = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Parry
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -191,7 +193,7 @@ Pivot             = center
 [T-HeadsUpText]
 String            = 10
 
-;FX
+; Temporary melee and parry fx items until I finalize animations.
 
 [FX-Melee]
 SlotList          = FXS-Melee
@@ -204,8 +206,8 @@ Curve             = sine
 StartTime         = 0
 EndTime           = @O-Pilot1.MeleeDuration
 Absolute          = true
-StartValue        = (255, 255, 0)
-EndValue          = (255, 0, 0)
+StartValue        = (255, 165, 0) ; orange
+EndValue          = (255, 0, 0) ; red
 
 [FX-Parry]
 SlotList          = FXS-Parry
@@ -218,5 +220,29 @@ Curve             = sine
 StartTime         = 0
 EndTime           = @O-Pilot1.ParryDuration
 Absolute          = true
-StartValue        = (255, 255, 0)
-EndValue          = (0, 0, 255)
+StartValue        = (0, 255, 255) ; cyan
+EndValue          = (0, 0, 255) ; blue
+
+; Temporary melee and parry objects until I finalize animations
+
+[O-Melee@ScrollObject]
+Graphic           = G-Melee
+Position          = (0, 0, -0.5)
+Scale             = (0.5, 0.5, 1)
+UseParentSpace    = position
+FXList            = FX-Melee
+
+[G-Melee]
+Texture           = SpaceShooterRedux/PNG/Damage/playerShip1_damage3.png
+Pivot             = center
+
+[O-Parry@ScrollObject]
+Graphic           = G-Parry
+Position          = (0, 0, -0.5)
+Scale             = (0.5, 0.5, 1)
+UseParentSpace    = position
+FXList            = FX-Parry
+
+[G-Parry]
+Texture           = SpaceShooterRedux/PNG/Damage/playerShip1_damage3.png
+Pivot             = center
