--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -68,10 +68,12 @@ SelfFlags         = ship1
 CheckMask         = wall
 
 [O-Ship1P1@O-Ship1]
+ShaderList           = SH-OutlineP1
 ChildList            = @O-ShipP1
 
 [O-Ship1P2@O-Ship1]
 Flip                 = @O-ShipP2
+ShaderList           = SH-OutlineP2
 ChildList            = @O-ShipP2
 
 ; Guns
