Implemented some rough menus. Next, I will implement some individual pilots before a large scale refactoring.

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -2,6 +2,7 @@
 
 @../data/config/Arena.ini@
 @../data/config/Geometry.ini@
+@../data/config/Menu.ini@
 @../data/config/Partition.ini@
 @../data/config/Pilot.ini@
 @../data/config/Projectile.ini@
