--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -193,6 +193,15 @@ Pivot             = center
 [T-HeadsUpText]
 String            = 10
 
+; Icons
+
+[O-Pilot1IconP1]
+Graphic              = G-Pilot1
+Position             = (0, 0, -0.1)
+UseParentSpace       = position
+IgnoreFromParent     = scale
+ChildList            = O-Ship1IconP1
+
 ; Temporary melee and parry fx items until I finalize animations.
 
 [FX-Melee]
