--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -125,3 +125,12 @@ Object            = O-OrbP1
 
 [SP-OrbP2@SP-Spawner]
 Object            = O-OrbP2
+
+; Icons
+
+[O-Ship1IconP1]
+Graphic              = G-Ship
+Position             = (0, 0, 0.05)
+Rotation             = 90.0
+UseParentSpace       = position
+IgnoreFromParent     = scale
