--- a/data/config/Shader.ini
+++ b/data/config/Shader.ini
@@ -6,6 +6,7 @@ PulseTime         = 1.0 ; The amount of time, in seconds, that constitutes one c
 AgeInSeconds      = time
 OpacityLimit      = 0.5 ; Since this is an alpha value, it must be between 0.0 and 1.0
 Code              = "
+
 void main()
 {
 	// The default color of the texture at the current pixel.
@@ -68,3 +69,9 @@ BorderColorEnd     = (0.0, 0.0, 1.0) ; blue
 [SH-OutlineP2@SH-Outline]
 BorderColorStart      = (1.0, 0.6470588235, 0.0) ; orange
 BorderColorEnd     = (1.0, 0.0, 0.0) ; red
+
+[SH-OutlineText@SH-Outline]
+BorderThicknessX      = 0.0005
+BorderThicknessY      = 0.0005
+BorderColorStart      = (0.0, 1.0, 1.0) ; cyan
+BorderColorEnd        = (0.0, 0.0, 1.0) ; blue
